--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
     - if: branch = master
       stage: conan_deploy
       script:
-        - sudo apt-get install -y python3 cmake
+        - sudo apt-get install -y python3 python3-pip cmake
         - pip3 install -y conan
         - make conan_remote
         - make conan_create
