--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
       stage: conan_deploy
       script:
         - sudo apt-get install -y python3 python3-pip cmake
-        - pip3 install -y conan
+        - pip3 install conan
         - make conan_remote
         - make conan_create
         - VERSION=0.0.1 make conan_upload
