--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,15 @@ jobs:
     - if: branch = master
       stage: conan_deploy
       script:
-        - sudo apt-get install -y python3 python3-pip cmake python3-setuptools
+        - sudo apt-get install -y python3 python3-pip python3-setuptools
+        - mkdir ~/temp && cd ~/temp
+        - wget https://cmake.org/files/v$version/cmake-$version.$build.tar.gz
+        - tar -xzvf cmake-3.17.1.tar.gz
+        - cd cmake-3.17.1/
+        - ./bootstrap
+        - make
+        - sudo make install
+        - cd ..
         - pip3 install conan
         - make conan_remote
         - make conan_create
