--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
         - make
         - sudo make install
         - cd ..
-        - pip3 install conan
+        - pip3 install conan wheel
         - make conan_remote
         - make conan_create
         - VERSION=0.0.1 make conan_upload
