--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ jobs:
         - sudo make install
         - cd ..
         - pip3 install conan wheel
+        - python3 setup.py bdist_wheel
         - make conan_remote
         - make conan_create
         - VERSION=0.0.1 make conan_upload
