--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ jobs:
         - make
         - sudo make install
         - cd ..
-        - pip3 install conan wheel
-        - python3 setup.py bdist_wheel
+        - pip3 install wheel
+        - pip3 install conan
         - make conan_remote
         - make conan_create
         - VERSION=0.0.1 make conan_upload
