--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
         - cd ../..
         - pip3 install wheel
         - pip3 install conan
-        - ls
+        - cmake --version
         - make conan_remote
         - make conan_create
         - VERSION=0.0.1 make conan_upload
