--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,15 @@ jobs:
   include:
     - if: branch = master
       stage: conan_deploy
-      script:
-        - sudo apt-get install -y python3 python3-pip python3-setuptools
-        - mkdir temp && cd temp
-        - wget https://cmake.org/files/v3.19/cmake-3.19.1.tar.gz
-        - tar -xzvf cmake-3.19.1.tar.gz
+      install:
+        - travis_retry wget https://cmake.org/files/v3.19/cmake-3.19.1.tar.gz
+        - tar -xvf cmake-3.19.1.tar.gz > /dev/null
         - cd cmake-3.19.1/
         - ./bootstrap
         - make
         - sudo make install
-        - cd ../..
+      script:
+        - sudo apt-get install -y python3 python3-pip python3-setuptools
         - pip3 install wheel
         - pip3 install conan
         - cmake --version
