--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: minimal
 os: linux
-dist: xenial
+dist: focal
 services:
   - docker
 jobs:
@@ -9,13 +9,10 @@ jobs:
       stage: conan_deploy
       install:
         - sudo apt remove --purge --auto-remove cmake
-        - travis_retry wget https://cmake.org/files/v3.19/cmake-3.19.1.tar.gz
-        - tar -xvf cmake-3.19.1.tar.gz > /dev/null
-        - cd cmake-3.19.1/
-        - ./bootstrap
-        - make
-        - sudo make install
-        - cd ..
+        - wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
+        - sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'
+        - sudo apt update
+        - sudo apt install cmake
       script:
         - sudo apt-get install -y python3 python3-pip python3-setuptools
         - pip3 install wheel
