--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
       stage: conan_deploy
       script:
         - docker build -t $DOCKER_USERNAME/cppkg-cmake:travis-${TRAVIS_COMMIT} -f Dockerfile.conan .
-        - docker run --rm $DOCKER_USERNAME/cppkg-cmake:travis-${TRAVIS_COMMIT}
+        - docker run -e CONAN_USR=${CONAN_USR} -e CONAN_PWD=${CONAN_PWD} --rm $DOCKER_USERNAME/cppkg-cmake:travis-${TRAVIS_COMMIT}
 notifications:
   email: false
 branches:
