--- a/Dockerfile.conan
+++ b/Dockerfile.conan
@@ -1,6 +1,8 @@
 FROM mkaichen/bionic_conan_cmake:latest
 
 ENV APP_DIR /usr/src/cppkg
+ARG CONAN_USR
+ARG CONAN_PWD
 
 # working directory
 RUN mkdir -p $APP_DIR
